--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,13 +4,13 @@ spring.servlet.multipart.max-request-size=10MB
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.url=jdbc:postgresql://localhost:5432/train_o_gram?serverTimezone=UTC
 spring.datasource.username=postgres
-spring.datasource.password=ufvrt011020
+spring.datasource.password=password
 spring.task.scheduling.pool.size=4
 
 spring.liquibase.change-log=classpath:liquibase/db.changelog-master.xml
 spring.liquibase.url=jdbc:postgresql://localhost:5432/train_o_gram?serverTimezone=UTC
 spring.liquibase.user=postgres
-spring.liquibase.password=ufvrt011020
+spring.liquibase.password=password
 spring.liquibase.enabled=false
 
 spring.mail.host=smtp.gmail.com
@@ -27,10 +27,10 @@ jwt.header=Authorization
 jwt.secret = ufvrt011020vrt012rt011020290617vrt01
 jwt.expiration =6
 
-account.sid=AC26811b3a81c2bf3fff076a53169abeb1
-auth.token=2c747eaeb1c18106edef983b3e56d359
-path.service.sid=VA7de7c72b9e7be3d49aa5e53c67a11084
-template.id=d-733d88eaf846440ebb7b6fd915eda2dc
+account.sid=sid
+auth.token=token
+path.service.sid=servicesid
+template.id=id
 from=kondralex222@gmail.com
 from.name=Train-o-gram
 
